[gd_scene load_steps=7 format=3 uid="uid://dqyus5df1tp5i"]

[ext_resource type="Script" path="res://Scripts/Function/scene_transition.gd" id="1_y1rgf"]
[ext_resource type="Material" uid="uid://ci8fr3n7t2pef" path="res://Shaders/CRT_Edited.tres" id="2_pgfks"]
[ext_resource type="Theme" uid="uid://scev88nm8kc5" path="res://FontTheme.tres" id="3_d1qms"]

[sub_resource type="Animation" id="Animation_hnvjb"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dissolve:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ak2yg"]
resource_name = "dissolve"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dissolve:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hnxmf"]
_data = {
"RESET": SubResource("Animation_hnvjb"),
"dissolve": SubResource("Animation_ak2yg")
}

[node name="scene_transition" type="CanvasLayer"]
script = ExtResource("1_y1rgf")

[node name="dissolve" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
color = Color(0.0430392, 0.0430392, 0.0430392, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hnxmf")
}

[node name="msgWait" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ColorRect_Shader" type="ColorRect" parent="."]
z_index = 500
material = ExtResource("2_pgfks")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("3_d1qms")
theme_override_colors/font_color = Color(0.729412, 0.12549, 0.145098, 1)
theme_override_font_sizes/font_size = 48

[connection signal="timeout" from="msgWait" to="." method="_on_msg_wait_timeout"]
